refactor: restructured html divs for hosting forms, pages, and progress bar

--- a/host1c.html
+++ b/host1c.html
@@ -339,11 +339,14 @@
                   <p class="white-text">Only confirmed quests will be able to see your exact address.</p>
               </div>
           </div>
+     <div class="row">
+          <ul>
+              <li class="back-continue"><a href="host.1bhtml"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a></li>
+              <li class="back-continue"><a href="host1d.html"><button class="host-btn-green btn">Continue</button></a>
+              </li>
+          </ul>
       </div>
-      <div class="row">
-             <a class="back-continue" href="host1b.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-             <a href="host1d.html"><button class="host-btn-green btn back-continue">Continue</button></a>
-      </div>          
+      </div>         
   <div class="container">
       <hr>
       <div id="footer-logo">
