--- a/host2a.html
+++ b/host2a.html
@@ -44,11 +44,15 @@
                   <button class="host-btn-green upload-button form-control-file">Upload Photos</button>
               </div> 
           </div>
+                <div class="row">
+          <ul>
+              <li class="back-continue"><a href="host2.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+              </li>
+              <li class="back-continue"><a href="host2b.html"><button class="host-btn-green btn">Continue</button></a>
+              </li>
+          </ul>
+      </div> 
       </div>
-      <div class="row">
-          <a class="back-continue" href="host2.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-          <a href="host2b.html"><button class="host-btn-green btn back-continue">Skip for now</button></a>
-      </div>          
   <div class="container">
       <hr>
       <div id="footer-logo">
