--- a/host3c.html
+++ b/host3c.html
@@ -70,10 +70,15 @@
               </div>
               <br>
           </div>
+        
           <div class="row">
-          <a class="back-continue" href="host3b.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-          <a href="host3d.html"><button class="host-btn-green btn back-continue">Continue</button></a>
-          </div>
+          <ul>
+              <li class="back-continue"><a href="host3b.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+              </li>
+              <li class="back-continue"><a href="host3d.html"><button class="host-btn-green btn">Continue</button></a>
+              </li>
+          </ul>
+      </div> 
       </div>
           <div class="container">
               <hr>
