--- a/host1a.html
+++ b/host1a.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hosting | The Basics</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="custom.css" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-transparent navbar-static-top">
-      <div class="top-header">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">StayMarta</a><img id="logo" src='logo.png'/>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <!-- <li class="active"><a href="#">Home</a></li> -->
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Save</a></li>
-            <li><a href="#">Save &amp; Exit</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-      
-      <div class="progress">
-          <div class="progress-bar progress-bar-green" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-              <span class="sr-only">20% Complete</span>
-          </div>
-      </div>
+    <head>
+        <meta charset="UTF-8">
+        <title>Hosting | The Basics</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link href="custom.css" rel="stylesheet">
+    </head>
+    <body>
+        <nav class="navbar navbar-transparent navbar-static-top">
+            <div class="top-header">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">StayMarta</a><img id="logo" src='logo.png'/>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <!-- <li class="active"><a href="#">Home</a></li> -->
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Save</a></li>
+                        <li><a href="#">Save &amp; Exit</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+            <div class="progress">
+                <div class="progress-bar progress-bar-green" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                    <span class="sr-only">20% Complete</span>
+                </div>
+            </div>
+        </nav>
 
       <div class="container">
           <h3>Step 1 The Basics</h3>
@@ -89,8 +88,12 @@
           </div>
           <br>
           <div class="row">
-                  <a class="back-continue" href="host.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-                  <a href="host1b.html"><button class="host-btn-green btn back-continue">Continue</button></a>
+              <ul>
+                  <li class="back-continue"><a href="host.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                  </li>
+                  <li class="back-continue"><a href="host1b.html"><button class="host-btn-green btn">Continue</button></a>
+                  </li>
+              </ul>
           </div>
       </div>      
       
