--- a/host1b.html
+++ b/host1b.html
@@ -80,11 +80,15 @@
                   <p class="white-text">A toilet with no shower or bath equals 0.5 bathoom.</p>
               </div>
           </div>
-      </div>
-      <div class="row">
-             <a class="back-continue" href="host1a.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-             <a href="host1c.html"><button class="host-btn-green btn back-continue">Continue</button></a>
-      </div>          
+                <div class="row">
+              <ul>
+                  <li class="back-continue"><a href="host1a.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                  </li>
+                  <li class="back-continue"><a href="host1c.html"><button class="host-btn-green btn">Continue</button></a>
+                  </li>
+              </ul>
+          </div>   
+      </div>     
   <div class="container">
       <hr>
       <div id="footer-logo">
