--- a/host1d.html
+++ b/host1d.html
@@ -53,11 +53,16 @@
           </div>
               </div>
           </div>
+          <div class="row">
+          <ul>
+              <li class="back-continue"><a href="host1c.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+              </li>
+              <li class="back-continue"><a href="host1e.html"><button class="host-btn-green btn">Continue</button></a>
+              </li>
+          </ul>
+      </div>         
       </div>
-      <div class="row">
-             <a class="back-continue" href="host1c.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-             <a href="host1e.html"><button class="host-btn-green btn back-continue">Continue</button></a>
-      </div>          
+
   <div class="container">
       <hr>
       <div id="footer-logo">
