--- a/host2b.html
+++ b/host2b.html
@@ -53,10 +53,14 @@
               </div>
               
               </div>
-         <div class="row">
-             <a class="back-continue" href="host2a.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-             <a href="host2c.html"><button class="host-btn-green btn back-continue">Continue</button></a>
-         </div>  
+    <div class="row">
+          <ul>
+              <li class="back-continue"><a href="host2a.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+              </li>
+              <li class="back-continue"><a href="host2c.html"><button class="host-btn-green btn">Continue</button></a>
+              </li>
+          </ul>
+      </div> 
       </div>
   <div class="container">
       <hr>
