--- a/host2c.html
+++ b/host2c.html
@@ -62,10 +62,14 @@
               </div>
               
               </div>
-         <div class="row">
-             <a class="back-continue" href="host2b.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-             <a href="host3.html"><button class="host-btn-green btn back-continue">Continue</button></a>
-         </div>  
+    <div class="row">
+          <ul>
+              <li class="back-continue"><a href="host2b.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+              </li>
+              <li class="back-continue"><a href="host3.html"><button class="host-btn-green btn">Continue</button></a>
+              </li>
+          </ul>
+      </div>
       </div>
     
   <div class="container">
