--- a/host3a.html
+++ b/host3a.html
@@ -56,11 +56,15 @@
           <div class="row">
              <p><a href="">Add more guest requirements</a></p>
           </div>
-      </div>
-      <div class="row">
-          <a class="back-continue" href="host3.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-          <a href="host3b.html"><button class="host-btn-green btn back-continue">Continue</button></a>
-      </div>          
+        <div class="row">
+          <ul>
+              <li class="back-continue"><a href="host3.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+              </li>
+              <li class="back-continue"><a href="host3b.html"><button class="host-btn-green btn">Continue</button></a>
+              </li>
+          </ul>
+      </div>  
+      </div>       
   <div class="container">
       <hr>
       <div id="footer-logo">
