--- a/host3b.html
+++ b/host3b.html
@@ -63,9 +63,13 @@
               </div>
           </div>
           <div class="row">
-          <a class="back-continue" href="host3a.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-          <a href="host3c.html"><button class="host-btn-green btn back-continue">Continue</button></a>
-          </div>
+          <ul>
+              <li class="back-continue"><a href="host3a.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+              </li>
+              <li class="back-continue"><a href="host3c.html"><button class="host-btn-green btn">Continue</button></a>
+              </li>
+          </ul>
+      </div> 
       </div>
           <div class="container">
               <hr>
