--- a/host3e.html
+++ b/host3e.html
@@ -49,10 +49,14 @@
                   </div>
               <br>
           </div>
-          <div class="row">
-          <a class="back-continue" href="host3c.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-          <a href="host3e.html"><button class="host-btn-green btn back-continue">Continue</button></a>
-          </div>
+    <div class="row">
+          <ul>
+              <li class="back-continue"><a href="host3d.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+              </li>
+              <li class="back-continue"><a href="host3f.html"><button class="host-btn-green btn">Continue</button></a>
+              </li>
+          </ul>
+      </div>
       </div>
           <div class="container">
               <hr>
