--- a/host3f.html
+++ b/host3f.html
@@ -134,10 +134,14 @@
                   </div>
               </div>
               <br>
-          <div class="row">
-          <a class="back-continue" href="host3e.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-          <a href="host3g.html"><button class="host-btn-green btn back-continue">Continue</button></a>
-          </div>
+      <div class="row">
+          <ul>
+              <li class="back-continue"><a href="host3e.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+              </li>
+              <li class="back-continue"><a href="host3g.html"><button class="host-btn-green btn">Continue</button></a>
+              </li>
+          </ul>
+      </div> 
       </div>
           <div class="container">
               <hr>
