--- a/host3g.html
+++ b/host3g.html
@@ -55,10 +55,14 @@
               <br>
           </div>
           <br>
-          <div class="row">
-          <a class="back-continue" href="host3f.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-          <a href="host3h.html"><button class="host-btn-green btn back-continue">Continue</button></a>
-          </div>
+        <div class="row">
+          <ul>
+              <li class="back-continue"><a href="host3f.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+              </li>
+              <li class="back-continue"><a href="host3h.html"><button class="host-btn-green btn">Continue</button></a>
+              </li>
+          </ul>
+      </div> 
       </div>
           <div class="container">
               <hr>
