--- a/host3h.html
+++ b/host3h.html
@@ -46,10 +46,14 @@
               <p>By accepting our Terms of Service and listing your space, you certify that you will follow applicable laws and regulations.</p>
           </div>
           <br>
-          <div class="row">
-          <a class="back-continue" href="host3g.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-          <a href="index.html"><button class="host-btn-green btn back-continue">Finish</button></a>
-          </div>
+    <div class="row">
+          <ul>
+              <li class="back-continue"><a href="host3g.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+              </li>
+              <li class="back-continue"><a href="index.html"><button class="host-btn-green btn">Continue</button></a>
+              </li>
+          </ul>
+      </div> 
       </div>
       <div class="container">
           <hr>
