--- a/ListingPg.html
+++ b/ListingPg.html
@@ -380,6 +380,21 @@
       </div>
     </div>
     </div>
+    <div class="simlist">
+    	<hr>
+    	<h4>About the Host</h4>
+        <div class="LPReviews">
+        <div class="user_profile">
+          <div class="user" style="background-image: url('https://pre00.deviantart.net/67de/th/pre/i/2013/005/7/9/circle_profile_by_pdogkasper-d5qkroq.png');"> 
+          </div>
+          <div class="namerating">
+            <h3>Cristi Smith</h3>
+            <h3>Atlanta, GA</h3>
+          </div> 
+        </div>
+        <p style="margin-left: 95px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+    </div>
     <div class="container">
         <hr>
         <div id="footer-logo">
