--- a/host1a.html
+++ b/host1a.html
@@ -8,7 +8,9 @@
         <link href="custom.css" rel="stylesheet">
     </head>
     <body>
+        <!-- Nav Start -->
         <nav class="navbar navbar-transparent navbar-static-top">
+            <!-- Header Start -->
             <div class="top-header">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -28,103 +30,106 @@
                         <li><a href="#">Save &amp; Exit</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
-            </div>
+            </div> <!-- Header End -->
+            <!-- Progress Bar Start -->
             <div class="progress">
                 <div class="progress-bar progress-bar-green" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
                     <span class="sr-only">20% Complete</span>
                 </div>
+            </div> <!-- Progress Bar End -->
+        </nav> <!-- Nav End -->
+        
+        <!-- Main Content Start-->
+        <div class="container">
+            <h3>Step 1 The Basics</h3>
+            <div class="row"> 
+                <!-- Form Input Starts -->
+                <div class="col-md-6">
+                    <h2>Hi! John! Let's set you up to become a host.</h2>
+                    <form>
+                        <div class="form-input">
+                            <label for="property">What type of property do you have?</label>
+                            <br>
+                            <select name="propery">
+                                <option value="Apartment">Apartment</option>
+                                <option value="Condo">Condo</option>
+                                <option value="House">House</option>
+                                <option value="Townhouse">Townhouse</option>
+                            </select>                       
+                        </div>
+                        <br>
+                        <div class="form-input">
+                            <label for="room">What will guests be using?</label>
+                            <br>
+                            <select name="room">
+                                <option value="Private Room">Private Room</option>
+                                <option value="Dorm">Dorm</option>
+                            </select>     
+                        </div>
+                        <br>
+                        <div class="form-input">
+                            <label for="capacity">How many quests can your place accomodate?</label>
+                            <br>
+                            <select name="capacity">
+                                <option value="1">1 guest</option>
+                                <option value="2">2 guests</option>
+                                <option value="3">3 guests</option>
+                                <option value="4">4 guests</option>
+                                <option value="5">5+ guests</option>
+                            </select>                        
+                        </div>
+                        <br>
+                        <div class="form-input">
+                            <label for="location">Where is your place?</label>
+                            <br>
+                            <input type="text" name="location" placeholder="Alanta, GA, USA">  
+                        </div>                   
+                    </form>
+                    <br>
+                </div> <!-- Form Input End -->
+                <!-- Side Visual Start -->
+                <div class="col-md-6">
+                    <img class="host-side-image" src="porch.jpeg">
+                </div>
             </div>
-        </nav>
-
-      <div class="container">
-          <h3>Step 1 The Basics</h3>
-          <div class="row"> 
-              <div class="col-md-6">
-                  <h2>Hi! John! Let's set you up to become a host.</h2>
-                  <form>
-                      <div class="form-input">
-                          <label for="property">What type of property do you have?</label>
-                          <br>
-                          <select name="propery">
-                              <option value="Apartment">Apartment</option>
-                              <option value="Condo">Condo</option>
-                              <option value="House">House</option>
-                              <option value="Townhouse">Townhouse</option>
-                          </select>                       
-                      </div>
-                      <br>
-                      <div class="form-input">
-                          <label for="room">What will guests be using?</label>
-                          <br>
-                          <select name="room">
-                              <option value="Private Room">Private Room</option>
-                              <option value="Dorm">Dorm</option>
-                          </select>     
-                      </div>
-                      <br>
-                      <div class="form-input">
-                          <label for="capacity">How many quests can your place accomodate?</label>
-                          <br>
-                          <select name="capacity">
-                              <option value="1">1 guest</option>
-                              <option value="2">2 guests</option>
-                              <option value="3">3 guests</option>
-                              <option value="4">4 guests</option>
-                              <option value="5">5+ guests</option>
-                         </select>                        
-                      </div>
-                      <br>
-                      <div class="form-input">
-                          <label for="location">Where is your place?</label>
-                          <br>
-                          <input type="text" name="location" placeholder="Alanta, GA, USA">    
-                      </div>                   
-                  </form>
-                  <br>
-              </div>
-              <div class="col-md-6">
-                  <img class="host-side-image" src="porch.jpeg">
-              </div>
-          </div>
-          <br>
-          <div class="row">
-              <ul>
-                  <li class="back-continue"><a href="host.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-                  </li>
-                  <li class="back-continue"><a href="host1b.html"><button class="host-btn-green btn">Continue</button></a>
-                  </li>
-              </ul>
-          </div>
-      </div>      
-      
-  <div class="container">
-      <hr>
-      <div id="footer-logo">
-          <img id="logo" src='logo.png'/><p>StayMarta</p>
-      </div>
-  </div>
-
-  <!-- Footer -->
-  <footer class="container-fluid text-center">
-      <div class="footer-like-line">
-          <a href="#"><p class="footer-links">About</p></a>
-          <a href="#"><p class="footer-links">How It Works</p></a>
-          <a href="#"><p class="footer-links">Terms &amp; Privacy</p></a>
-          <a href="#"><p class="footer-links">Cancellation Policy</p></a>
-          <a href="#"><p class="footer-links">Blog</p></a>
-          <a href="#"><p class="footer-links">Contact</p></a>
-      </div>
-
-      <div class="footer-like-line">
-          <p class="icon-line" id="copyright">Copyright © 2017 Marta Inc. Made with love in USA &amp; Indonesia</p>
-          <a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-          <a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-          <a href="https://www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-          <a href="https://www.medium.com"><i class="fa fa-medium" aria-hidden="true"></i></a>
-          <a href="https://www.pinterest.com"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-      </div>
-  </footer>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-  </body>
+            <br>
+            <!-- Back/Continue -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                    </li>
+                    <li class="back-continue"><a href="host1b.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div> <!-- Back/Continue End -->
+        </div> <!-- Main Content End -->
+        <!-- Footer Logo -->     
+        <div class="container">
+            <hr>
+            <div id="footer-logo">
+                <img id="logo" src='logo.png'/><p>StayMarta</p>
+            </div>
+        </div>
+        <!-- Footer -->
+        <footer class="container-fluid text-center">
+            <div class="footer-like-line">
+                <a href="#"><p class="footer-links">About</p></a>
+                <a href="#"><p class="footer-links">How It Works</p></a>
+                <a href="#"><p class="footer-links">Terms &amp; Privacy</p></a>
+                <a href="#"><p class="footer-links">Cancellation Policy</p></a>
+                <a href="#"><p class="footer-links">Blog</p></a>
+                <a href="#"><p class="footer-links">Contact</p></a>
+            </div>
+            <div class="footer-like-line">
+                <p class="icon-line" id="copyright">Copyright © 2017 Marta Inc. Made with love in USA &amp; Indonesia</p>
+                <a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://www.medium.com"><i class="fa fa-medium" aria-hidden="true"></i></a>
+                <a href="https://www.pinterest.com"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+            </div>
+        </footer>
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    </body>
 </html>
