--- a/host2a.html
+++ b/host2a.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hosting | The Details</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="custom.css" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-transparent navbar-static-top">
-      <div class="top-header">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">StayMarta</a><img id="logo" src='logo.png'/>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <!-- <li class="active"><a href="#">Home</a></li> -->
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Save</a></li>
-            <li><a href="#">Save &amp; Exit</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-      
-      <div class="progress">
-          <div class="progress-bar progress-bar-green" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 33%">
-              <span class="sr-only">33% Complete</span>
-          </div>
-      </div>
+    <head>
+        <meta charset="UTF-8">
+        <title>Hosting | The Basics</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link href="custom.css" rel="stylesheet">
+    </head>
+    <body>
+        <!-- Nav Start -->
+        <nav class="navbar navbar-transparent navbar-static-top">
+            <!-- Header Start -->
+            <div class="top-header">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">StayMarta</a><img id="logo" src='logo.png'/>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <!-- <li class="active"><a href="#">Home</a></li> -->
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Save</a></li>
+                        <li><a href="#">Save &amp; Exit</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div> <!-- Header End -->
+            <!-- Progress Bar Start -->
+            <div class="progress">
+                <div class="progress-bar progress-bar-green" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 33%">
+                    <span class="sr-only">33% Complete</span>
+                </div>
+            </div> <!-- Progress Bar End -->
+        </nav> <!-- Nav End -->
+        <!-- Main Content Start-->
       <div class="container">
           <h3>Step 2 The Details</h3>
           <div class="row">
@@ -53,34 +56,33 @@
           </ul>
       </div> 
       </div>
-  <div class="container">
-      <hr>
-      <div id="footer-logo">
-          <img id="logo" src='logo.png'/><p>StayMarta</p>
-      </div>
-  </div>
-
-  <!-- Footer -->
-  <footer class="container-fluid text-center">
-      <div class="footer-like-line">
-          <a href="#"><p class="footer-links">About</p></a>
-          <a href="#"><p class="footer-links">How It Works</p></a>
-          <a href="#"><p class="footer-links">Terms &amp; Privacy</p></a>
-          <a href="#"><p class="footer-links">Cancellation Policy</p></a>
-          <a href="#"><p class="footer-links">Blog</p></a>
-          <a href="#"><p class="footer-links">Contact</p></a>
-      </div>
-
-      <div class="footer-like-line">
-          <p class="icon-line" id="copyright">Copyright © 2017 Marta Inc. Made with love in USA &amp; Indonesia</p>
-          <a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-          <a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-          <a href="https://www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-          <a href="https://www.medium.com"><i class="fa fa-medium" aria-hidden="true"></i></a>
-          <a href="https://www.pinterest.com"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-      </div>
-  </footer>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-  </body>
+        <!-- Footer Logo -->     
+        <div class="container">
+            <hr>
+            <div id="footer-logo">
+                <img id="logo" src='logo.png'/><p>StayMarta</p>
+            </div>
+        </div>
+        <!-- Footer -->
+        <footer class="container-fluid text-center">
+            <div class="footer-like-line">
+                <a href="#"><p class="footer-links">About</p></a>
+                <a href="#"><p class="footer-links">How It Works</p></a>
+                <a href="#"><p class="footer-links">Terms &amp; Privacy</p></a>
+                <a href="#"><p class="footer-links">Cancellation Policy</p></a>
+                <a href="#"><p class="footer-links">Blog</p></a>
+                <a href="#"><p class="footer-links">Contact</p></a>
+            </div>
+            <div class="footer-like-line">
+                <p class="icon-line" id="copyright">Copyright © 2017 Marta Inc. Made with love in USA &amp; Indonesia</p>
+                <a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://www.medium.com"><i class="fa fa-medium" aria-hidden="true"></i></a>
+                <a href="https://www.pinterest.com"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+            </div>
+        </footer>
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    </body>
 </html>
