--- a/host1a.html
+++ b/host1a.html
@@ -90,7 +90,7 @@
                 <!-- Side Visual Start -->
                 <div class="col-md-6">
                     <img class="host-side-image" src="porch.jpeg">
-                </div>
+                </div> <!-- Side Visual Ends -->
             </div>
             <br>
             <!-- Back/Continue -->
@@ -103,6 +103,7 @@
                 </ul>
             </div> <!-- Back/Continue End -->
         </div> <!-- Main Content End -->
+        
         <!-- Footer Logo -->     
         <div class="container">
             <hr>
