style: formatted main content

--- a/host1b.html
+++ b/host1b.html
@@ -43,6 +43,7 @@
         <div class="container">
             <h3>Step 1 The Basics</h3>
             <div class="row">
+                <!-- Form Input Starts -->
                 <div class="col-md-6">
                     <br>
                     <form>
@@ -78,11 +79,12 @@
                         </div>
                         <br>
                     </form>
-                </div>
+                </div><!-- Form Input End -->
+                <!-- Side Visual Start -->
                 <div class="col-md-6 host-side-graphic">
                     <i class="fa fa-shower" aria-hidden="true"></i>
                     <p class="white-text">A toilet with no shower or bath equals 0.5 bathoom.</p>
-                </div>
+                </div> <!-- Side Visual End -->
             </div>
             <!-- Back/Continue -->
             <div class="row">
