--- a/host1e.html
+++ b/host1e.html
@@ -38,13 +38,15 @@
                 </div>
             </div> <!-- Progress Bar End -->
         </nav> <!-- Nav End -->
+        
         <!-- Main Content Start-->
-      <div class="container">
-          <h3>Step 1 The Basics</h3>
-          <div class="row">
-              <form action="" method="GET, POST">
-                  <fieldset class="col-md-6">
-                    <legend>What amentities do you offer?</legend>
+        <div class="container">
+            <h3>Step 1 The Basics</h3>
+            <div class="row">
+                <!-- Form Input Start -->
+                <form action="" method="GET, POST">
+                    <fieldset class="col-md-6">
+                        <legend>What amentities do you offer?</legend>
                         <input type="checkbox" name="amenities" value="Wifi">Wifi<br>
                         <input type="checkbox" name="amenities" value="Shampoo">Shampoo<br>     
                         <input type="checkbox" name="amenities" value="Closet">Closet/Drawers<br>
@@ -58,41 +60,43 @@
                         <input type="checkbox" name="amenities" value="Hair Dryer">Hair Dryer<br>
                         <input type="checkbox" name="amenities" value="Pets friendly">Pets in the house<br>
                         <br>
-                  </fieldset>
-                  <fieldset class="col-md-6">
-                      <legend>What spaces can guest(s) use?</legend>
-                      <input type="checkbox" name="space" value="pool">Pool<br>
-                      <input type="checkbox" name="space" value="kitchen">Kitchen<br>
-                      <input type="checkbox" name="space" value="Washer">Laundry-Washer<br>
-                      <input type="checkbox" name="space" value="Dryer">Laudry-Dryer<br>
-                      <input type="checkbox" name="space" value="Parking">Parking<br>
-                      <input type="checkbox" name="space" value="Elevator">Elevator<br>
-                      <input type="checkbox" name="space" value="Tub">Hot Tub<br>
-                      <input type="checkbox" name="space" value="Gym">Gym<br>
-                      <br>
-                  </fieldset>
-                  <br>
-                  <fieldset class="col-md-6">
-                      <legend>What security do you offer?</legend>
-                      <input type="checkbox" name="security" value="Detector">Smoke Detector<br>
-                      <input type="checkbox" name="security" value="Detector">Carbon Monoxide Detector<br>
-                      <input type="checkbox" name="security" value="First-Aid">First Aid Kit<br>
-                      <input type="checkbox" name="security" value="Safety-Card">Safety Card<br>
-                      <input type="checkbox" name="security" value="Fire-Extinguisher">Fire Extinguisher<br>
-                      <input type="checkbox" name="security" value="Bedroom-Lock">Lock On Bedroom Door<br>
-                      <br>
-                  </fieldset>
-              </form>
-              </div>
-                <div class="row">
-          <ul>
-              <li class="back-continue"><a href="host1d.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-              </li>
-              <li class="back-continue"><a href="host2.html"><button class="host-btn-green btn">Continue</button></a>
-              </li>
-          </ul>
-      </div> 
-          </div>
+                    </fieldset>
+                        <br>
+                    <fieldset class="col-md-6">
+                        <legend>What spaces can guest(s) use?</legend>
+                        <input type="checkbox" name="space" value="pool">Pool<br>
+                        <input type="checkbox" name="space" value="kitchen">Kitchen<br>
+                        <input type="checkbox" name="space" value="Washer">Laundry-Washer<br>
+                        <input type="checkbox" name="space" value="Dryer">Laudry-Dryer<br>
+                        <input type="checkbox" name="space" value="Parking">Parking<br>
+                        <input type="checkbox" name="space" value="Elevator">Elevator<br>
+                        <input type="checkbox" name="space" value="Tub">Hot Tub<br>
+                        <input type="checkbox" name="space" value="Gym">Gym<br>
+                        <br>
+                    </fieldset>
+                    <br>
+                    <fieldset class="col-md-6">
+                        <legend>What security do you offer?</legend>
+                        <input type="checkbox" name="security" value="Detector">Smoke Detector<br>
+                        <input type="checkbox" name="security" value="Detector">Carbon Monoxide Detector<br>
+                        <input type="checkbox" name="security" value="First-Aid">First Aid Kit<br>
+                        <input type="checkbox" name="security" value="Safety-Card">Safety Card<br>
+                        <input type="checkbox" name="security" value="Fire-Extinguisher">Fire Extinguisher<br>
+                        <input type="checkbox" name="security" value="Bedroom-Lock">Lock On Bedroom Door<br>
+                        <br>
+                    </fieldset>
+                </form> <!-- Form Input End -->
+            </div>
+            <!-- Back/Continue -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host1d.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                    </li>
+                    <li class="back-continue"><a href="host2.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div> <!-- Back/Continue End-->
+        </div> <!-- Main Content End-->
                
         <!-- Footer Logo -->     
         <div class="container">
