--- a/host3a.html
+++ b/host3a.html
@@ -38,36 +38,45 @@
                 </div>
             </div> <!-- Progress Bar End -->
         </nav> <!-- Nav End -->
+        
         <!-- Main Content Start-->
-      <div class="container">
-          <h3>Step 3 The Rules</h3>
-          <div class="row">
-             <h2>Review our guest requirements</h2>
-             <p>All guests must submit the following to book:</p>
-             <input type="checkbox" checked="checked" value="">Profile Photo<br>
-             <input type="checkbox" checked="checked" value="">Confirmed email<br>  
-             <input type="checkbox" checked="checked" value="">Confirmed phone number<br> 
-             <input type="checkbox" checked="checked" value="">Payment information<br>   
-          </div>
-          <div class="row">
-             <p>All guests must also do the following before booking:</p>
-             <input type="checkbox" checked="checked" value="">Agree to your House Rules<br>
-             <input type="checkbox" checked="checked" value="">Send you a message about their trip<br>  
-             <input type="checkbox" checked="checked" value="">Tell you how many people are coming<br> 
-             <input type="checkbox" checked="checked" value="">Confirm their check-in time when they will be arriving within 2 days<br>   
-          </div>
-          <div class="row">
-             <p><a href="">Add more guest requirements</a></p>
-          </div>
-        <div class="row">
-          <ul>
-              <li class="back-continue"><a href="host3.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-              </li>
-              <li class="back-continue"><a href="host3b.html"><button class="host-btn-green btn">Continue</button></a>
-              </li>
-          </ul>
-      </div>  
-      </div>       
+        <div class="container">
+            <h3>Step 3 The Rules</h3>
+            <div class="row">
+                <h2>Review our guest requirements</h2>
+                <p>All guests must submit the following to book:</p>
+                <!-- Form Input Start -->
+                <form>
+                    <input type="checkbox" checked="checked" value="">Profile Photo<br>
+                    <input type="checkbox" checked="checked" value="">Confirmed email<br>  
+                    <input type="checkbox" checked="checked" value="">Confirmed phone number<br> 
+                    <input type="checkbox" checked="checked" value="">Payment information<br>   
+                </form> <!-- Form Input End -->
+            </div>
+            <div class="row">
+                <p>All guests must also do the following before booking:</p>
+                <!-- Form Input Start -->
+                <form>
+                    <input type="checkbox" checked="checked" value="">Agree to your House Rules<br>
+                    <input type="checkbox" checked="checked" value="">Send you a message about their trip<br>  
+                    <input type="checkbox" checked="checked" value="">Tell you how many people are coming<br> 
+                    <input type="checkbox" checked="checked" value="">Confirm their check-in time when they will be arriving within 2 days<br>            
+                </form> <!-- Form Input End -->
+            </div>
+            <div class="row">
+                <p><a href="">Add more guest requirements</a></p>
+            </div>
+            <!-- Back/Continue -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host3.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                    </li>
+                    <li class="back-continue"><a href="host3b.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div> <!-- Back/Continue End -->  
+        </div> <!-- Main Content End-->    
+        
         <!-- Footer Logo -->     
         <div class="container">
             <hr>
