--- a/host3b.html
+++ b/host3b.html
@@ -38,42 +38,52 @@
                 </div>
             </div> <!-- Progress Bar End -->
         </nav> <!-- Nav End -->
+        
         <!-- Main Content Start-->
-      <div class="container">
-          <h3>Step 3 The Rules</h3>
-          <div class="row">
-              <div class="col-md-6">
-                  <div class="row">
-                      <h2>Set House Rules for your guests</h2>
-                      <input type="checkbox" value="">Suitable for children (2-12 years)<br>
-                      <input type="checkbox" value="">Suitable for infants (Under 2 years)<br>  
-                      <input type="checkbox" value="">Suitable for pets<br> 
-                      <input type="checkbox" value="">Smoking allowed<br>   
-                      <input type="checkbox" value="">Alcohol allowed<br>               
-                      <br>
-                  </div>
-                  <div class="row">
-                      <label for="rules">Additional Rules</label>
-                      <br>
-                      <input type="text" name="rules" value="" placeholder="Quiet hours? No shoes in the house?">
-                      <button class="white-btn">Add</button>  
-                  </div> 
-              </div>
-              <br>
-              <div class="col-md-6 host-side-graphic">
-                  <i class="fa fa-list-alt" aria-hidden="true"></i>
-                  <p class="white-text">Guests must agree to all your House Rules before they can book.</p>
-              </div>
-          </div>
-          <div class="row">
-          <ul>
-              <li class="back-continue"><a href="host3a.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-              </li>
-              <li class="back-continue"><a href="host3c.html"><button class="host-btn-green btn">Continue</button></a>
-              </li>
-          </ul>
-      </div> 
-      </div>
+        <div class="container">
+            <h3>Step 3 The Rules</h3>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row">
+                        <h2>Set House Rules for your guests</h2>
+                        <!-- Form Input Start -->
+                        <form>
+                            <input type="checkbox" value="">Suitable for children (2-12 years)<br>
+                            <input type="checkbox" value="">Suitable for infants (Under 2 years)<br>  
+                            <input type="checkbox" value="">Suitable for pets<br> 
+                            <input type="checkbox" value="">Smoking allowed<br>   
+                            <input type="checkbox" value="">Alcohol allowed<br>               
+                            <br>
+                        </form> <!-- Form Input End -->
+                    </div>
+                    <div class="row">
+                        <label for="rules">Additional Rules</label>
+                        <br>
+                        <!-- Form Input Start -->
+                        <form>
+                            <input type="text" name="rules" value="" placeholder="Quiet hours? No shoes in the house?">
+                            <button class="white-btn">Add</button>  
+                        </form> <!-- Form Input End -->         
+                    </div> 
+                </div>
+                <br>
+                <!-- Side Visual Start -->
+                <div class="col-md-6 host-side-graphic">
+                    <i class="fa fa-list-alt" aria-hidden="true"></i>
+                    <p class="white-text">Guests must agree to all your House Rules before they can book.</p>
+                </div> <!-- Side Visual End -->
+            </div>
+            <!-- Back/Continue -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host3a.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                    </li>
+                    <li class="back-continue"><a href="host3c.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div> <!-- Back/Continue End -->
+        </div> <!-- Main Content End -->
+        
         <!-- Footer Logo -->     
         <div class="container">
             <hr>
