--- a/host3c.html
+++ b/host3c.html
@@ -38,51 +38,55 @@
                 </div>
             </div> <!-- Progress Bar End -->
         </nav> <!-- Nav End -->
-        <!-- Main Content Start-->
-      <div class="container">
-          <h3>Step 3 The Rules</h3>
-          <div class="row">
-              <div class="col-md-6">
-                  <div class="row">
-                      <h2>How far in advance can guests book?</h2>
-                      <select>
-                          <option>Select One</option>
-                          <option>1 week</option>
-                          <option>2 weeks</option>
-                          <option>3 weeks</option>
-                          <option>4 weeks</option>
-                          <option>5 weeks</option>
-                          <option>6 weeks</option>
-                          <option>7 weeks</option>
-                          <option>8 weeks</option>
-                          <option>9 weeks</option>
-                          <option>10 weeks</option>
-                          <option>11 weeks</option>
-                          <option>12 weeks</option>
-                          <option>13 weeks</option>
-                          <option>14 weeks</option>
-                          <option>15 weeks</option>
-                          <option>16 weeks</option>
-                          <option>17 weeks</option>
-                          <option>18 weeks</option>
-                          <option>19 weeks</option>
-                          <option>20 weeks</option>
-                      </select>              
-                      <br>
-                  </div>
-              </div>
-              <br>
-          </div>
         
-          <div class="row">
-          <ul>
-              <li class="back-continue"><a href="host3b.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-              </li>
-              <li class="back-continue"><a href="host3d.html"><button class="host-btn-green btn">Continue</button></a>
-              </li>
-          </ul>
-      </div> 
-      </div>
+        <!-- Main Content Start-->
+        <div class="container">
+            <h3>Step 3 The Rules</h3>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row">
+                        <h2>How far in advance can guests book?</h2>
+                        <form> <!-- Form Input Start -->
+                            <select>
+                                <option>Select One</option>
+                                <option>1 week</option>
+                                <option>2 weeks</option>
+                                <option>3 weeks</option>
+                                <option>4 weeks</option>
+                                <option>5 weeks</option>
+                                <option>6 weeks</option>
+                                <option>7 weeks</option>
+                                <option>8 weeks</option>
+                                <option>9 weeks</option>
+                                <option>10 weeks</option>
+                                <option>11 weeks</option>
+                                <option>12 weeks</option>
+                                <option>13 weeks</option>
+                                <option>14 weeks</option>
+                                <option>15 weeks</option>
+                                <option>16 weeks</option>
+                                <option>17 weeks</option>
+                                <option>18 weeks</option>
+                                <option>19 weeks</option>
+                                <option>20 weeks</option>
+                            </select> 
+                        </form> <!-- Form Input End -->
+                        <br>
+                    </div>
+                </div>
+                <br>
+            </div>
+            <!-- Back/Continue -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host3b.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                    </li>
+                    <li class="back-continue"><a href="host3d.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div> <!-- Back/Continue End-->
+        </div> <!-- Main Content End -->
+        
         <!-- Footer Logo -->     
         <div class="container">
             <hr>
