--- a/host1c.html
+++ b/host1c.html
@@ -38,19 +38,21 @@
                 </div>
             </div> <!-- Progress Bar End -->
         </nav> <!-- Nav End -->
+        
         <!-- Main Content Start-->
         <div class="container">
             <h3>Step 1 The Basics</h3>
-          <div class="row">
-              <div class="col-md-6">
-              <br>
-              <h4>Where is your place located?</h4>
-              <br>
-              <form>
-                  <div class="form-input">
-                     <label for="country">Country</label>
-                     <br>
-                     <select name="country">
+            <div class="row">
+                <!-- Form Input Start -->
+                <div class="col-md-6">
+                    <br>
+                    <h4>Where is your place located?</h4>
+                    <br>
+                    <form>
+                        <div class="form-input">
+                            <label for="country">Country</label>
+                            <br>
+                            <select name="country">
                         <option value="null">Select One</option>
                         <option value="AF">Afghanistan</option>
                         <option value="AX">Åland Islands</option>
@@ -302,54 +304,57 @@
                         <option value="ZM">Zambia</option>
                         <option value="ZW">Zimbabwe</option>
                     </select>
-                      <br>                                   
-                  </div>
-                  <br>
-                  <div class="form-input">
-                      <label for="host-street">Street Address</label>
-                      <br>
-                      <input type='text' size='50' id='host-location' name='host-street' value='' placeholder="e.g. 123 Fourth St."/>
-                  </div>
-                  <br>
-                  <div class="form-input">
-                      <label for="host-apartment">Apartment, Suite, Building (optional)</label>
-                      <br>
-                      <input type='text' size='20' id='host-location' name='host-apartment' value='' placeholder="e.g. Apt #3"/>
-                  </div>
-                  <br>
-                  <div class="form-input">
-                      <label for="host-city">City</label>
-                      <br>
-                      <input type='text' size='30' id='host-location' name='host-city' value=''/>     
-                  </div>
-                  <br>
-                  <div class="form-input">
-                      <label for="host-state">State</label>
-                      <br>
-                      <input type='text' size='10' id='host-location' name='host-state' value=''/>     
-                  </div>
-                  <br>
-                  <div class="form-input">
-                      <label for="host-zip">Zip Code</label>
-                      <br>
-                      <input type='number' size='10' id='host-location' name='host-state' value='' placeholder="e.g. 99301"/>    
-                  </div>               
-                  <br>
-              </form>
-              </div>
-              <div class="col-md-6 host-side-graphic">
-                  <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-                  <p class="white-text">Only confirmed quests will be able to see your exact address.</p>
-              </div>
-          </div>
-     <div class="row">
-          <ul>
-              <li class="back-continue"><a href="host.1bhtml"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a></li>
-              <li class="back-continue"><a href="host1d.html"><button class="host-btn-green btn">Continue</button></a>
-              </li>
-          </ul>
-      </div>
-      </div>         
+                            <br>                                  
+                        </div>
+                        <br>
+                        <div class="form-input">
+                            <label for="host-street">Street Address</label>
+                            <br>
+                            <input type='text' size='50' id='host-location' name='host-street' value='' placeholder="e.g. 123 Fourth St."/>
+                        </div>
+                        <br>
+                        <div class="form-input">
+                            <label for="host-apartment">Apartment, Suite, Building (optional)</label>
+                            <br>
+                            <input type='text' size='20' id='host-location' name='host-apartment' value='' placeholder="e.g. Apt #3"/>
+                        </div>
+                        <br>
+                        <div class="form-input">
+                            <label for="host-city">City</label>
+                            <br>
+                            <input type='text' size='30' id='host-location' name='host-city' value=''/>     
+                        </div>
+                        <br>
+                        <div class="form-input">
+                            <label for="host-state">State</label>
+                            <br>
+                            <input type='text' size='10' id='host-location' name='host-state' value=''/>     
+                        </div>
+                        <br>
+                        <div class="form-input">
+                            <label for="host-zip">Zip Code</label>
+                            <br>
+                            <input type='number' size='10' id='host-location' name='host-state' value='' placeholder="e.g. 99301"/>    
+                        </div>               
+                        <br>
+                    </form>
+                </div> <!-- Form Input End -->
+                <!-- Side Visual Start -->
+                <div class="col-md-6 host-side-graphic">
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                    <p class="white-text">Only confirmed quests will be able to see your exact address.</p>
+                </div> <!-- Side Visual End -->
+            </div>            
+            <!-- Back/Continue -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host.1bhtml"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a></li>
+                    <li class="back-continue"><a href="host1d.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div>  <!-- Back/Continue End-->
+        </div> <!-- Main Content End -->
+        
         <!-- Footer Logo -->     
         <div class="container">
             <hr>
