--- a/host1d.html
+++ b/host1d.html
@@ -38,33 +38,38 @@
                 </div>
             </div> <!-- Progress Bar End -->
         </nav> <!-- Nav End -->
+        
         <!-- Main Content Start-->
-      <div class="container">
-          <h3>Step 1 The Basics</h3>
-          <div class="row">
-              <div class="col-md-12">
-              <br>
-              <h4>Where is your place located? <medium class="text-muted">Drag pin to change location</medium></h4>
-              <br>
-          <div class="address">
-            <p>675 Ponce de Leon Ave Ne,</p>
-            <p>Alanta, GA, 30308</p>
-            <button>Edit address</button>
-             
-          </div>
-          <div class="Google-map">  
-          </div>
-              </div>
-          </div>
-          <div class="row">
-          <ul>
-              <li class="back-continue"><a href="host1c.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-              </li>
-              <li class="back-continue"><a href="host1e.html"><button class="host-btn-green btn">Continue</button></a>
-              </li>
-          </ul>
-      </div>         
-      </div>
+        <div class="container">
+            <h3>Step 1 The Basics</h3>
+            <div class="row">
+                <!-- Form Input Start -->
+                <div class="col-md-12">
+                <br>
+                <h4>Where is your place located? <medium class="text-muted">Drag pin to change location</medium></h4>
+                <br>
+                    <div class="address">
+                        <p>675 Ponce de Leon Ave Ne,</p>
+                        <p>Alanta, GA, 30308</p>
+                        <button>Edit address</button>
+                    </div>
+                </div> <!-- Form Input End -->
+            </div>
+            <div class="row">
+                <!-- Google Map -->
+                <div class="Google-map">  
+                </div> <!-- Google Map End -->
+            </div>
+            <!-- Back/Continue -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host1c.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                    </li>
+                    <li class="back-continue"><a href="host1e.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div> <!-- Back/Continue End -->        
+        </div> <!-- Main Content End-->
 
         <!-- Footer Logo -->     
         <div class="container">
