--- a/host2a.html
+++ b/host2a.html
@@ -38,24 +38,27 @@
                 </div>
             </div> <!-- Progress Bar End -->
         </nav> <!-- Nav End -->
+        
         <!-- Main Content Start-->
-      <div class="container">
-          <h3>Step 2 The Details</h3>
-          <div class="row">
-              <h2>What does your place look like?</h2>
-              <div class="host-upload-background">
-                  <button class="host-btn-green upload-button form-control-file">Upload Photos</button>
-              </div> 
-          </div>
-                <div class="row">
-          <ul>
-              <li class="back-continue"><a href="host2.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-              </li>
-              <li class="back-continue"><a href="host2b.html"><button class="host-btn-green btn">Continue</button></a>
-              </li>
-          </ul>
-      </div> 
-      </div>
+        <div class="container">
+            <h3>Step 2 The Details</h3>
+            <div class="row">
+                <h2>What does your place look like?</h2>
+                <div class="host-upload-background">
+                    <button class="host-btn-green upload-button form-control-file">Upload Photos</button>
+                </div> 
+            </div>
+            <!-- Back/Continue -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host2.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                    </li>
+                    <li class="back-continue"><a href="host2b.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div> <!-- Back/Continue End -->
+        </div> <!-- Main Content End-->
+        
         <!-- Footer Logo -->     
         <div class="container">
             <hr>
