--- a/host3d.html
+++ b/host3d.html
@@ -38,34 +38,38 @@
                 </div>
             </div> <!-- Progress Bar End -->
         </nav> <!-- Nav End -->
+        
         <!-- Main Content Start-->
-      <div class="container">
-          <h3>Step 3 The Rules</h3>
-          <div class="row">
-              <div class="col-md-6">
-                  <div class="row">
-                      <h2>How long can guests stay?</h2>
-                      <form action="#">
-                          <label for="min"></label>
-                          <input class="night-stay" type="number" name="min" min="0" max="365" placeholder="nights min"> 
-                          <br>
-                          <label for="max"></label>
-                          <input class="night-stay" type="number" name="max" min="0" max="365" placeholder="nights max">    
-                      </form>
-                      <br>
-                  </div>
-              </div>
-              <br>
-          </div>
-    <div class="row">
-          <ul>
-              <li class="back-continue"><a href="host3c.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-              </li>
-              <li class="back-continue"><a href="host3e.html"><button class="host-btn-green btn">Continue</button></a>
-              </li>
-          </ul>
-      </div> 
-      </div>
+        <div class="container">
+            <h3>Step 3 The Rules</h3>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row">
+                        <h2>How long can guests stay?</h2>
+                        <!--Form Input Start -->
+                        <form action="#">
+                            <label for="min"></label>
+                            <input class="night-stay" type="number" name="min" min="0" max="365" placeholder="nights min"> 
+                            <br>
+                            <label for="max"></label>
+                            <input class="night-stay" type="number" name="max" min="0" max="365" placeholder="nights max">    
+                        </form> <!--Form Input End -->
+                        <br>
+                    </div>
+                </div>
+                <br>
+            </div>
+            <!-- Back/Continue -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host3c.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                    </li>
+                    <li class="back-continue"><a href="host3e.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div> <!-- Back/Continue End -->
+        </div>
+        
         <!-- Footer Logo -->     
         <div class="container">
             <hr>
