--- a/host3e.html
+++ b/host3e.html
@@ -38,29 +38,32 @@
                 </div>
             </div> <!-- Progress Bar End -->
         </nav> <!-- Nav End -->
+        
         <!-- Main Content Start-->
-      <div class="container">
-          <h3>Step 3 The Rules</h3>
-          <div class="row">
-                  <div class="row">
-                      <h2>Block Out Calendar</h2>
-                      <button class="date-btn">Block all dates</button>
-                      <form>
-                          <!-- for calendar widget -->
-                      </form>
-                      <br>
-                  </div>
-              <br>
-          </div>
-    <div class="row">
-          <ul>
-              <li class="back-continue"><a href="host3d.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-              </li>
-              <li class="back-continue"><a href="host3f.html"><button class="host-btn-green btn">Continue</button></a>
-              </li>
-          </ul>
-      </div>
-      </div>
+        <div class="container">
+            <h3>Step 3 The Rules</h3>
+            <div class="row">
+                <h2>Block Out Calendar</h2>
+                <!-- Form Input Start -->
+                <form>
+                    <button class="date-btn">Block all dates</button>
+                    <div class="calendar">
+                        <!-- for calendar widget -->
+                    </div>
+                </form> <!-- Form Input End -->
+                <br>
+            </div>
+            <!-- Back/Continue -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host3d.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                    </li>
+                    <li class="back-continue"><a href="host3f.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div> <!-- Back/Continue End -->
+        </div> <!-- Main Content End -->
+        
         <!-- Footer Logo -->     
         <div class="container">
             <hr>
