--- a/host3f.html
+++ b/host3f.html
@@ -38,114 +38,118 @@
                 </div>
             </div> <!-- Progress Bar End -->
         </nav> <!-- Nav End -->
+        
         <!-- Main Content Start-->
-      <div class="container">
-          <h3>Step 3 The Rules</h3>
-          <div class="row">
-              <div class="col-md-6">
-                  <div class="row">
-                      <h2>Set your base price</h2>
-                      <form>
-                          <label for="base-price">Base price</label><br>
-                          <span class="currencyinput">$<input class="price-select" type="number" min=0 name="base-price" placeholder="per night"></span>
-                          <p class="currency-suggested">Suggest Price: $175 | <button class="currency-btn">Set</button></p>
-                          <label for="currency">Currency</label><br>
-                          <select name="currency">
-                              <option value="USD" selected="selected">USD</option>
-                              <option value="EUR">Euro</option>
-                              <option value="GBP">United Kingdom Pounds</option>
-                              <option value="DZD">Algeria Dinars</option>
-                              <option value="ARP">Argentina Pesos</option>
-                              <option value="AUD">Australia Dollars</option>
-                              <option value="ATS">Austria Schillings</option>
-                              <option value="BSD">Bahamas Dollars</option>
-                              <option value="BBD">Barbados Dollars</option>
-                              <option value="BEF">Belgium Francs</option>
-                              <option value="BMD">Bermuda Dollars</option>
-                              <option value="BRR">Brazil Real</option>
-                              <option value="BGL">Bulgaria Lev</option>
-                              <option value="CAD">Canada Dollars</option>
-                              <option value="CLP">Chile Pesos</option>
-                              <option value="CNY">China Yuan Renmimbi</option>
-                              <option value="CYP">Cyprus Pounds</option>
-                              <option value="CSK">Czech Republic Koruna</option>
-                              <option value="DKK">Denmark Kroner</option>
-                              <option value="NLG">Dutch Guilders</option>
-                              <option value="XCD">Eastern Caribbean Dollars</option>
-                              <option value="EGP">Egypt Pounds</option>
-                              <option value="FJD">Fiji Dollars</option>
-                              <option value="FIM">Finland Markka</option>
-                              <option value="FRF">France Francs</option>
-                              <option value="DEM">Germany Deutsche Marks</option>
-                              <option value="XAU">Gold Ounces</option>
-                              <option value="GRD">Greece Drachmas</option>
-                              <option value="HKD">Hong Kong Dollars</option>
-                              <option value="HUF">Hungary Forint</option>
-                              <option value="ISK">Iceland Krona</option>
-                              <option value="INR">India Rupees</option>
-                              <option value="IDR">Indonesia Rupiah</option>
-                              <option value="IEP">Ireland Punt</option>
-                              <option value="ILS">Israel New Shekels</option>
-                              <option value="ITL">Italy Lira</option>
-                              <option value="JMD">Jamaica Dollars</option>
-                              <option value="JPY">Japan Yen</option>
-                              <option value="JOD">Jordan Dinar</option>
-                              <option value="KRW">Korea (South) Won</option>
-                              <option value="LBP">Lebanon Pounds</option>
-                              <option value="LUF">Luxembourg Francs</option>
-                              <option value="MYR">Malaysia Ringgit</option>
-                              <option value="MXP">Mexico Pesos</option>
-                              <option value="NLG">Netherlands Guilders</option>
-                              <option value="NZD">New Zealand Dollars</option>
-                              <option value="NOK">Norway Kroner</option>
-                              <option value="PKR">Pakistan Rupees</option>
-                              <option value="XPD">Palladium Ounces</option>
-                              <option value="PHP">Philippines Pesos</option>
-                              <option value="XPT">Platinum Ounces</option>
-                              <option value="PLZ">Poland Zloty</option>
-                              <option value="PTE">Portugal Escudo</option>
-                              <option value="ROL">Romania Leu</option>
-                              <option value="RUR">Russia Rubles</option>
-                              <option value="SAR">Saudi Arabia Riyal</option>
-                              <option value="XAG">Silver Ounces</option>
-                              <option value="SGD">Singapore Dollars</option>
-                              <option value="SKK">Slovakia Koruna</option>
-                              <option value="ZAR">South Africa Rand</option>
-                              <option value="KRW">South Korea Won</option>
-                              <option value="ESP">Spain Pesetas</option>
-                              <option value="XDR">Special Drawing Right (IMF)</option>
-                              <option value="SDD">Sudan Dinar</option>
-                              <option value="SEK">Sweden Krona</option>
-                              <option value="CHF">Switzerland Francs</option>
-                              <option value="TWD">Taiwan Dollars</option>
-                              <option value="THB">Thailand Baht</option>
-                              <option value="TTD">Trinidad and Tobago Dollars</option>
-                              <option value="TRL">Turkey Lira</option>
-                              <option value="VEB">Venezuela Bolivar</option>
-                              <option value="ZMK">Zambia Kwacha</option>
-                              <option value="EUR">Euro</option>
-                              <option value="XCD">Eastern Caribbean Dollars</option>
-                              <option value="XDR">Special Drawing Right (IMF)</option>
-                              <option value="XAG">Silver Ounces</option>
-                              <option value="XAU">Gold Ounces</option>
-                              <option value="XPD">Palladium Ounces</option>
-                              <option value="XPT">Platinum Ounces</option>
-                          </select>
-                      </form>
-                  </div>
-                  <br>
-                  </div>
-              </div>
-              <br>
-      <div class="row">
-          <ul>
-              <li class="back-continue"><a href="host3e.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-              </li>
-              <li class="back-continue"><a href="host3g.html"><button class="host-btn-green btn">Continue</button></a>
-              </li>
-          </ul>
-      </div> 
-      </div>
+        <div class="container">
+            <h3>Step 3 The Rules</h3>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row">
+                        <h2>Set your base price</h2>
+                        <!-- Input Form Start -->
+                        <form>
+                            <label for="base-price">Base price</label><br>
+                            <span class="currencyinput">$<input class="price-select" type="number" min=0 name="base-price" placeholder="per night"></span>
+                            <p class="currency-suggested">Suggest Price: $175 | <button class="currency-btn">Set</button></p>
+                            <label for="currency">Currency</label><br>
+                            <select name="currency">
+                                <option value="USD" selected="selected">USD</option>
+                                <option value="EUR">Euro</option>
+                                <option value="GBP">United Kingdom Pounds</option>
+                                <option value="DZD">Algeria Dinars</option>
+                                <option value="ARP">Argentina Pesos</option>
+                                <option value="AUD">Australia Dollars</option>
+                                <option value="ATS">Austria Schillings</option>
+                                <option value="BSD">Bahamas Dollars</option>
+                                <option value="BBD">Barbados Dollars</option>
+                                <option value="BEF">Belgium Francs</option>
+                                <option value="BMD">Bermuda Dollars</option>
+                                <option value="BRR">Brazil Real</option>
+                                <option value="BGL">Bulgaria Lev</option>
+                                <option value="CAD">Canada Dollars</option>
+                                <option value="CLP">Chile Pesos</option>
+                                <option value="CNY">China Yuan Renmimbi</option>
+                                <option value="CYP">Cyprus Pounds</option>
+                                <option value="CSK">Czech Republic Koruna</option>
+                                <option value="DKK">Denmark Kroner</option>
+                                <option value="NLG">Dutch Guilders</option>
+                                <option value="XCD">Eastern Caribbean Dollars</option>
+                                <option value="EGP">Egypt Pounds</option>
+                                <option value="FJD">Fiji Dollars</option>
+                                <option value="FIM">Finland Markka</option>
+                                <option value="FRF">France Francs</option>
+                                <option value="DEM">Germany Deutsche Marks</option>
+                                <option value="XAU">Gold Ounces</option>
+                                <option value="GRD">Greece    Drachmas</option>
+                                <option value="HKD">Hong Kong Dollars</option>
+                                <option value="HUF">Hungary Forint</option>
+                                <option value="ISK">Iceland Krona</option>
+                                <option value="INR">India Rupees</option>
+                                <option value="IDR">Indonesia Rupiah</option>
+                                <option value="IEP">Ireland Punt</option>
+                                <option value="ILS">Israel New Shekels</option>
+                                <option value="ITL">Italy Lira</option>
+                                <option value="JMD">Jamaica Dollars</option>
+                                <option value="JPY">Japan Yen</option>
+                                <option value="JOD">Jordan Dinar</option>
+                                <option value="KRW">Korea (South) Won</option>
+                                <option value="LBP">Lebanon Pounds</option>
+                                <option value="LUF">Luxembourg Francs</option>
+                                <option value="MYR">Malaysia Ringgit</option>
+                                <option value="MXP">Mexico Pesos</option>
+                                <option value="NLG">Netherlands Guilders</option>
+                                <option value="NZD">New Zealand Dollars</option>
+                                <option value="NOK">Norway Kroner</option>
+                                <option value="PKR">Pakistan Rupees</option>
+                                <option value="XPD">Palladium Ounces</option>
+                                <option value="PHP">Philippines Pesos</option>
+                                <option value="XPT">Platinum Ounces</option>
+                                <option value="PLZ">Poland Zloty</option>
+                                <option value="PTE">Portugal Escudo</option>
+                                <option value="ROL">Romania Leu</option>
+                                <option value="RUR">Russia Rubles</option>
+                                <option value="SAR">Saudi Arabia Riyal</option>
+                                <option value="XAG">Silver Ounces</option>
+                                <option value="SGD">Singapore Dollars</option>
+                                <option value="SKK">Slovakia Koruna</option>
+                                <option value="ZAR">South Africa Rand</option>
+                                <option value="KRW">South Korea Won</option>
+                                <option value="ESP">Spain Pesetas</option>
+                                <option value="XDR">Special Drawing Right (IMF)</option>
+                                <option value="SDD">Sudan Dinar</option>
+                                <option value="SEK">Sweden Krona</option>
+                                <option value="CHF">Switzerland Francs</option>
+                                <option value="TWD">Taiwan Dollars</option>
+                                <option value="THB">Thailand Baht</option>
+                                <option value="TTD">Trinidad and Tobago Dollars</option>
+                                <option value="TRL">Turkey Lira</option>
+                                <option value="VEB">Venezuela Bolivar</option>
+                                <option value="ZMK">Zambia Kwacha</option>
+                                <option value="EUR">Euro</option>
+                                <option value="XCD">Eastern Caribbean Dollars</option>
+                                <option value="XDR">Special Drawing Right (IMF)</option>
+                                <option value="XAG">Silver Ounces</option>
+                                <option value="XAU">Gold Ounces</option>
+                                <option value="XPD">Palladium Ounces</option>
+                                <option value="XPT">Platinum Ounces</option>
+                            </select>
+                        </form> <!-- Input Form End -->
+                    </div>
+                    <br>
+                </div>
+            </div>
+            <br>
+            <!-- Back/Continue End -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host3e.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                    </li>
+                    <li class="back-continue"><a href="host3g.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div> <!-- Back/Continue End -->
+        </div> <!-- Main Content End -->
+        
         <!-- Footer Logo -->     
         <div class="container">
             <hr>
