--- a/host3g.html
+++ b/host3g.html
@@ -38,35 +38,39 @@
                 </div>
             </div> <!-- Progress Bar End -->
         </nav> <!-- Nav End -->
+        
         <!-- Main Content Start-->
-      <div class="container">
-          <h3>Step 3 The Rules</h3>
-          <div class="row">
-              <div class="col-md-6">
-                  <div class="row">
-                      <h2>Set your discounts</h2>
-                      <form>
-                          <label for="weekly-discount">Weekly Discount</label><br>
-                          <span class="discountinput">%<input class="discount-select" type="number" min=0 name="weekly-discount" placeholder="off"></span>
-                          <p class="discount-suggested">Suggested Discount: 25% | <button class="discount-btn">Set</button></p>
-                          <label for="monthly-discount">Monthly Discount</label><br>
-                          <span class="discountinput">%<input class="discount-select" type="number" min=0 name="monthly-discount" placeholder="off"></span>
-                          <p class="discount-suggested">Suggested Discount: 50% | <button class="discount-btn">Set</button></p>
-                      </form>
-                  </div>
-              </div>
-              <br>
-          </div>
-          <br>
-        <div class="row">
-          <ul>
-              <li class="back-continue"><a href="host3f.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-              </li>
-              <li class="back-continue"><a href="host3h.html"><button class="host-btn-green btn">Continue</button></a>
-              </li>
-          </ul>
-      </div> 
-      </div>
+        <div class="container">
+            <h3>Step 3 The Rules</h3>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row">
+                        <h2>Set your discounts</h2>
+                        <!-- Form Input Start -->
+                        <form>
+                            <label for="weekly-discount">Weekly Discount</label><br>
+                            <span class="discountinput">%<input class="discount-select" type="number" min=0 name="weekly-discount" placeholder="off"></span>
+                            <p class="discount-suggested">Suggested Discount: 25% | <button class="discount-btn">Set</button></p>
+                            <label for="monthly-discount">Monthly Discount</label><br>
+                            <span class="discountinput">%<input class="discount-select" type="number" min=0 name="monthly-discount" placeholder="off"></span>
+                            <p class="discount-suggested">Suggested Discount: 50% | <button class="discount-btn">Set</button></p>
+                        </form> <!-- Form Input End -->
+                    </div>
+                </div>
+                <br>
+            </div>
+            <br>
+            <!-- Back/Continue -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host3f.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                    </li>
+                    <li class="back-continue"><a href="host3h.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div> <!-- Back/Continue End -->
+        </div> <!-- Main Content End -->
+        
         <!-- Footer Logo -->     
         <div class="container">
             <hr>
