--- a/host3h.html
+++ b/host3h.html
@@ -38,26 +38,29 @@
                 </div>
             </div> <!-- Progress Bar End -->
         </nav> <!-- Nav End -->
+        
         <!-- Main Content Start-->
-      <div class="container">
-          <h3>Step 3 The Rules</h3>
-          <div class="row">
-              <h2>Local laws and taxes</h2>
-              <p>Make sure you familiarize yourself with your local laws, as well as <a class="policy" href="">StayMarta’s Nondiscrimination Policy.</a></p>
-              <p>Please educate yourself about the laws in your jurisdiction before listing your space.</p>
-              <p>Most cities have rules covering homesharing, and the specific codes and ordinances can appear in many places (such as zoning, building, licensing or tax codes). In most places, you must register, get a permit, or obtain a license before you list your property or accept guests. You may also be responsible for collecting and remitting certain taxes. In some places, short-term rentals could be prohibited altogether.</p>
-              <p>By accepting our Terms of Service and listing your space, you certify that you will follow applicable laws and regulations.</p>
-          </div>
-          <br>
-    <div class="row">
-          <ul>
-              <li class="back-continue"><a href="host3g.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
-              </li>
-              <li class="back-continue"><a href="index.html"><button class="host-btn-green btn">Continue</button></a>
-              </li>
-          </ul>
-      </div> 
-      </div>
+        <div class="container">
+            <h3>Step 3 The Rules</h3>
+            <div class="row">
+                <h2>Local laws and taxes</h2>
+                <p>Make sure you familiarize yourself with your local laws, as well as <a class="policy" href="">StayMarta’s Nondiscrimination Policy.</a></p>
+                <p>Please educate yourself about the laws in your jurisdiction before listing your space.</p>
+                <p>Most cities have rules covering homesharing, and the specific codes and ordinances can appear in many places (such as zoning, building, licensing or tax codes). In most places, you must register, get a permit, or obtain a license before you list your property or accept guests. You may also be responsible for collecting and remitting certain taxes. In some places, short-term rentals could be prohibited altogether.</p>
+                <p>By accepting our Terms of Service and listing your space, you certify that you will follow applicable laws and regulations.</p>
+            </div>
+            <br>
+            <!-- Back/Continue -->
+            <div class="row">
+                <ul>
+                    <li class="back-continue"><a href="host3g.html"><p><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</p></a>
+                    </li>
+                    <li class="back-continue"><a href="index.html"><button class="host-btn-green btn">Continue</button></a>
+                    </li>
+                </ul>
+            </div> <!-- Back/Continue End --> 
+        </div> <!-- Main Content End-->
+        
         <!-- Footer Logo -->     
         <div class="container">
             <hr>
