feat: linked about page to footers

--- a/host3a.html
+++ b/host3a.html
@@ -87,7 +87,7 @@
         <!-- Footer -->
         <footer class="container-fluid text-center">
             <div class="footer-like-line">
-                <a href="#"><p class="footer-links">About</p></a>
+                <a href="aboutus.html"><p class="footer-links">About</p></a>
                 <a href="#"><p class="footer-links">How It Works</p></a>
                 <a href="#"><p class="footer-links">Terms &amp; Privacy</p></a>
                 <a href="#"><p class="footer-links">Cancellation Policy</p></a>
