--- a/aboutus.html
+++ b/aboutus.html
@@ -124,7 +124,7 @@
   <!-- Footer -->
   <footer class="container-fluid text-center">
       <div class="footer-like-line">
-          <a href="#"><p class="footer-links">About</p></a>
+          <a href="aboutus.html"><p class="footer-links">About</p></a>
           <a href="#"><p class="footer-links">How It Works</p></a>
           <a href="#"><p class="footer-links">Terms & Privacy</p></a>
           <a href="#"><p class="footer-links">Cancellation Policy</p></a>
