feat: updated footer links

--- a/aboutus.html
+++ b/aboutus.html
@@ -125,10 +125,10 @@
   <footer class="container-fluid text-center">
       <div class="footer-like-line">
           <a href="aboutus.html"><p class="footer-links">About</p></a>
-          <a href="#"><p class="footer-links">How It Works</p></a>
-          <a href="#"><p class="footer-links">Terms &amp; Privacy</p></a>
-          <a href="#"><p class="footer-links">Cancellation Policy</p></a>
-          <a href="#"><p class="footer-links">Blog</p></a>
+          <a href="host.html"><p class="footer-links">How It Works</p></a>
+          <a href="term&conds.html"><p class="footer-links">Terms &amp; Privacy</p></a>
+          <a href="cancellations.html"><p class="footer-links">Cancellation Policy</p></a>
+          <a href="bloghome.html"><p class="footer-links">Blog</p></a>
           <a href="#"><p class="footer-links">Contact</p></a>
       </div>
 
