--- a/host.html
+++ b/host.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>About Us</title>
+        <title>How it Works</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link href="custom.css" rel="stylesheet">
@@ -164,10 +164,10 @@
       <footer class="container-fluid text-center">
           <div class="footer-like-line">
               <a href="aboutus.html"><p class="footer-links">About</p></a>
-              <a href="#"><p class="footer-links">How It Works</p></a>
-              <a href="#"><p class="footer-links">Terms &amp; Privacy</p></a>
-              <a href="#"><p class="footer-links">Cancellation Policy</p></a>
-              <a href="#"><p class="footer-links">Blog</p></a>
+              <a href="host.html"><p class="footer-links">How It Works</p></a>
+              <a href="term&conds.html"><p class="footer-links">Terms &amp; Privacy</p></a>
+              <a href="cancellations.html"><p class="footer-links">Cancellation Policy</p></a>
+              <a href="bloghome.html"><p class="footer-links">Blog</p></a>
               <a href="#"><p class="footer-links">Contact</p></a>
           </div>
           <div class="footer-like-line">
