--- a/ListingPg.html
+++ b/ListingPg.html
@@ -221,7 +221,7 @@
                     <div class="row">
                       <div class="col">
                           <div class="card">
-                            <img class="card-img-top" src="./img/hawaii.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="" alt="Card image cap">
                             <div class="card-body">
                             <h4 class="card-title">Rotterdam</h4>
                             <p class="card-text">Spiritual disclipines retreat in Northern Ireland with beautiful views.</p>
