--- a/term&conds.html
+++ b/term&conds.html
@@ -31,7 +31,7 @@
               <!-- <li class="active"><a href="#">Home</a></li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Become a host</a></li>
+              <li><a href="host.html">Become a host</a></li>
               <li><a href="#">Log in</a></li>
             </ul>
           </div><!--/.nav-collapse -->
